--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "@ckeditor/ckeditor5-build-classic": "^29.2.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.0",
