--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "meteor-node-stubs": "^1.0.1",
     "moment": "^2.29.1",
     "react": "^16.13.1",
